--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event == 'pull_request' && github.ref == 'refs/heads/master'
+    if: github.event.workflow_run.conclusion == 'success'
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
