Major Update: Updated workflows for artifact and release creation

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -18,9 +18,9 @@ jobs:
       run: |
          sudo apt-get install -y jq
          VERSION=$(jq -r .version manifest.json)
-         echo "MANIFEST_VERSION=$VERSION" >> $GITHUB_ENV
+         echo "CURRENT_RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
 
-    - name: Authenticate with GitHub CLI
+    - name: Install GitHub CLI
       run: |
         sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C99B11DEB97541F0 23F3D4EA75716059
         sudo apt-add-repository https://cli.github.com/packages
@@ -30,4 +30,4 @@ jobs:
 
     - name: Create GitHub Release with Artifact
       run: |
-        gh release create v${{ env.MANIFEST_VERSION }} YouTube_Max_Quality_Switcher_v${{ env.MANIFEST_VERSION }}.zip --title "Release v${{ env.MANIFEST_VERSION }}" --notes "Release notes for v${{ env.MANIFEST_VERSION }}"
+        gh release create v${{ env.CURRENT_RELEASE_VERSION }} YouTube_Max_Quality_Switcher_v${{ env.CURRENT_RELEASE_VERSION }}.zip --title "Release v${{ env.CURRENT_RELEASE_VERSION }}" --notes "Release notes for v${{ env.MANIFEST_VERSION }}"
