--- a/.github/workflows/create-zip-artifact.yml
+++ b/.github/workflows/create-zip-artifact.yml
@@ -18,14 +18,14 @@ jobs:
       run: |
          sudo apt-get install -y jq
          VERSION=$(jq -r .version manifest.json)
-         echo "MANIFEST_VERSION=$VERSION" >> $GITHUB_ENV
+         echo "CURRENT_RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Zip specific files
       run: |
-        zip -r "YouTube_Max_Quality_Switcher_v${MANIFEST_VERSION}.zip" ./scripts/* ./media/* ./html/* ./styles/*
+        zip -r "YouTube_Max_Quality_Switcher_v${CURRENT_RELEASE_VERSION}.zip" ./scripts/* ./media/* ./html/* ./styles/*
       
     - name: Upload ZIP as artifact
       uses: actions/upload-artifact@v3
       with:
-        name: YouTube_Max_Quality_Switcher_v${{ env.MANIFEST_VERSION }}
-        path: YouTube_Max_Quality_Switcher_v${{ env.MANIFEST_VERSION }}.zip
+        name: YouTube_Max_Quality_Switcher_v${{ env.CURRENT_RELEASE_VERSION }}
+        path: YouTube_Max_Quality_Switcher_v${{ env.CURRENT_RELEASE_VERSION }}.zip
