--- a/.github/workflows/create-zip-artifact.yml
+++ b/.github/workflows/create-zip-artifact.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   zip:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     if: github.event.workflow_run.conclusion == 'success'
     steps:
     - name: Checkout code
