--- a/.github/workflows/version-updates.yml
+++ b/.github/workflows/version-updates.yml
@@ -32,7 +32,7 @@ jobs:
             exit 78
           fi
 
-      - name: Install GitHub CLI
+      - name: Install GitHub CLI and Login
         run: |
           sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C99B11DEB97541F0 23F3D4EA75716059
           sudo apt-add-repository https://cli.github.com/packages
@@ -52,9 +52,6 @@ jobs:
 
             echo
             echo "PR Number: $PR_NUMBER"
-            echo ========================
-            echo "Raw Commit Messages: "
-            echo "$COMMIT_MSG"
             echo ========================
 
             MERGE_COMMIT_HASH=$(git log --merges --oneline -1 | awk '{print $1}')
@@ -94,7 +91,7 @@ jobs:
                     echo "patch" > $TMP_BUMP_FILE
                 fi
               fi
-              echo "TMP_BUMP_FILE status: $( [[ -f $TMP_BUMP_FILE ]] && echo 'Created' || echo 'Still processing...' )"
+              echo "Calculated version bump for this commit: $(cat $TMP_BUMP_FILE)"
             done
             
             if [[ -f $TMP_BUMP_FILE ]]; then
