--- a/.github/workflows/version-updates.yml
+++ b/.github/workflows/version-updates.yml
@@ -91,7 +91,12 @@ jobs:
                     echo "patch" > $TMP_BUMP_FILE
                 fi
               fi
-              echo "Calculated version bump for this commit: $(cat $TMP_BUMP_FILE)"
+              
+              if [[ -f $TMP_BUMP_FILE ]]; then
+                  echo "Calculated version bump for this commit: $(cat $TMP_BUMP_FILE)"
+              else
+                  echo "Calculated version bump for this commit: null"
+              fi
             done
             
             if [[ -f $TMP_BUMP_FILE ]]; then
