--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -2,7 +2,7 @@ name: Create Release
 
 on:
     workflow_run:
-        workflows: ["Create Zip Artifact"]
+        workflows: ["Create Artifact"]
         types:
             - completed
 
