--- a/.github/workflows/create-artifact.yml
+++ b/.github/workflows/create-artifact.yml
@@ -25,13 +25,11 @@ jobs:
         mkdir YouTube_Max_Quality_Switcher_v${CURRENT_RELEASE_VERSION}
         cp manifest.json YouTube_Max_Quality_Switcher_v${CURRENT_RELEASE_VERSION}
         cp -r ./scripts ./media ./html ./styles YouTube_Max_Quality_Switcher_v${CURRENT_RELEASE_VERSION}/
-
-    - name: Upload directory as artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: YouTube_Max_Quality_Switcher_v${{ env.CURRENT_RELEASE_VERSION }}
-        path: YouTube_Max_Quality_Switcher_v${{ env.CURRENT_RELEASE_VERSION }}
-
+      
+    - name: Zip the directory
+      run: |
+        zip -r YouTube_Max_Quality_Switcher_v${CURRENT_RELEASE_VERSION}.zip YouTube_Max_Quality_Switcher_v${CURRENT_RELEASE_VERSION}
+        
     - name: Commit and push the artifact
       run: |
         git config user.name "GitHub Actions"
