Minor Update: Updated workflow

--- a/.github/workflows/pr-label-attach.yml
+++ b/.github/workflows/pr-label-attach.yml
@@ -4,16 +4,30 @@ on:
   pull_request:
     types: [opened, synchronize]
 
+concurrency: 
+  group: version-bump
+  cancel-in-progress: true
+
 jobs:
   attach-label:
     runs-on: ubuntu-20.04
     permissions: write-all
     steps:
+
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.github_token }}
           fetch-depth: 0
+          ref: ${{ github.ref }}
+
+      - name: Check for [auto-bump] in commit message
+        run: |
+          COMMIT_MSG=$(git log --format=%B -n 1)
+          if [[ $COMMIT_MSG == *"[auto-bump]"* ]]; then
+            echo "[auto-bump] detected in commit message. Exiting workflow."
+            exit 78
+          fi
 
       - name: Install GitHub CLI and Login
         run: |
@@ -22,7 +36,7 @@ jobs:
           sudo apt update
           sudo apt install -y gh
           gh auth login --with-token <<< "${{ secrets.github_token }}"
-
+          
       - name: Determine version bump
         id: determine-version
         run: |
@@ -31,22 +45,22 @@ jobs:
           BUMP="none"
           TMP_BUMP_FILE=bump.txt
           if [[ $COMMIT_MSG == "Merge pull request #"* ]]; then
-              PR_NUMBER=$(echo $COMMIT_MSG | grep -o '#[0-9]\+' | grep -o '[0-9]\+')
+            PR_NUMBER=$(echo $COMMIT_MSG | grep -o '#[0-9]\+' | grep -o '[0-9]\+')
 
-              echo
-              echo "PR Number: $PR_NUMBER"
-              echo ========================
+            echo
+            echo "PR Number: $PR_NUMBER"
+            echo ========================
 
-              MERGE_COMMIT_HASH=$(git log --merges --oneline -1 | awk '{print $1}')
-          
-              # Determine the merge base
-              MERGE_BASE=$(git merge-base $MERGE_COMMIT_HASH master)
-          
-              COMMIT_MSGS=$(git log $MERGE_COMMIT_HASH^..$MERGE_COMMIT_HASH --pretty=format:"%s")
-              echo "Fetched Commit Messages: "
-              echo "$COMMIT_MSGS"
-              echo ========================
-              echo "$COMMIT_MSGS" | while IFS= read -r msg; do
+            MERGE_COMMIT_HASH=$(git log --merges --oneline -1 | awk '{print $1}')
+        
+            # Determine the merge base
+            MERGE_BASE=$(git merge-base $MERGE_COMMIT_HASH master)
+        
+            COMMIT_MSGS=$(git log $MERGE_COMMIT_HASH^..$MERGE_COMMIT_HASH --pretty=format:"%s")
+            echo "Fetched Commit Messages: "
+            echo "$COMMIT_MSGS"
+            echo ========================
+            echo "$COMMIT_MSGS" | while IFS= read -r msg; do
               echo
               
               # Remove all whitespaces
@@ -55,7 +69,7 @@ jobs:
               
               # Skip empty commit messages
               if [ -z "$msg" ]; then
-                  continue
+                continue
               fi
               
               # Check if the message starts with "Revert" and extract the original commit message.
@@ -70,9 +84,9 @@ jobs:
               elif [[ $msg == "Major Update: "* || $msg == "New Feature: "* || $msg == "Improvement: "* || $msg == "Performance: "* || $msg == "Bug Fix: "* || $msg == "Security Fix: "* || $msg == "Hotfix: "* ]]; then
                   echo "minor" > $TMP_BUMP_FILE
               elif [[ ! -f $TMP_BUMP_FILE ]]; then
-                  if [[ $msg == "Minor Update: "* || $msg == "Documentation Update: "* || $msg == "Build: "* || $msg == "CI: "* || $msg == "Style: "* ]]; then
-                      echo "patch" > $TMP_BUMP_FILE
-                  fi
+                if [[ $msg == "Minor Update: "* || $msg == "Documentation Update: "* || $msg == "Build: "* || $msg == "CI: "* || $msg == "Style: "* ]]; then
+                    echo "patch" > $TMP_BUMP_FILE
+                fi
               fi
               
               if [[ -f $TMP_BUMP_FILE ]]; then
@@ -80,12 +94,12 @@ jobs:
               else
                   echo "Calculated version bump for this commit: null"
               fi
-              done
-              
-              if [[ -f $TMP_BUMP_FILE ]]; then
+            done
+            
+            if [[ -f $TMP_BUMP_FILE ]]; then
               BUMP=$(cat $TMP_BUMP_FILE)
               rm $TMP_BUMP_FILE
-              fi
+            fi
           fi
           echo
           echo ========================
