--- a/.github/workflows/pr-label-attach.yml
+++ b/.github/workflows/pr-label-attach.yml
@@ -20,9 +20,6 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.ref }}
 
-      - name: Fetch all branches
-        run: git fetch --all
-
       - name: Check for [auto-bump] in commit message
         run: |
           COMMIT_MSG=$(git log --format=%B -n 1)
@@ -38,6 +35,10 @@ jobs:
           sudo apt update
           sudo apt install -y gh
           gh auth login --with-token <<< "${{ secrets.github_token }}"
+
+      - name: Fetch target base branch
+        run: |
+          git fetch origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
 
       - name: Determine version bump
         id: determine-version
